# agencia-mkt-ia

./: .gitignore  README.md  agency.py  agency_manifesto.md  pyproject.toml  settings.json
AdCopyAgent/: AdCopyAgent.py  instructions.md
AdCopyAgent/tools/: AdCopyGenerator.py
FacebookManagerAgent/: FacebookManagerAgent.py  instructions.md
FacebookManagerAgent/tools/: AdCampaignStarter.py  AdCreator.py  AdPerformanceMonitor.py  AdSetCreator.py
ImageCreatorAgent/: ImageCreatorAgent.py  instructions.md
ImageCreatorAgent/tools/: ImageGenerator.py
MetaMarkCEO/: MetaMarkCEO.py  instructions.md
